--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -347,42 +347,6 @@
 	</div>
 }
 
-@if (usuario == null)
-{
-	<a class="boton-pequeño" style="padding: 24px 32px; margin-bottom: 60px; overflow: hidden;" href="/rewards">
-		<div>
-			<div style="font-size: 18px;">
-				@Herramientas.Idiomas.CogerCadena(idioma, "Rewards1", "Index")
-			</div>
-
-			<div style="margin-top: 10px;">
-				@Herramientas.Idiomas.CogerCadena(idioma, "Rewards2", "Index")
-			</div>
-
-			<div style="position: absolute; bottom: -90px; right: 20px; opacity: 0.5;">
-				<div style="display: flex; align-items: center; gap: 20px;">
-					@{
-						if (recompensas.Count >= 3)
-						{
-							int i = 0;
-							while (i < 3)
-							{
-								global::Juegos.Juego juego = BaseDatos.Juegos.Buscar.UnJuego(recompensas[i].JuegoId);
-
-								<div style="max-width: 120px;">
-									<img src="@juego.Imagenes.Library_600x900" style="width: 100%; height: 100%;" />
-								</div>
-
-								i += 1;
-							}
-						}
-					}
-				</div>
-			</div>
-		</div>
-	</a>
-}
-
 @if (noticiasMostrar.Count > 0)
 {
 	<div style="background-color: var(--fondoOscuro); padding: 30px; margin-bottom: 60px;">
@@ -537,7 +501,7 @@ else
 @if (juegosMinimosMostrar.Count > 0)
 {
 	<div style="max-width: 1000px; margin: auto;">
-		<div style="display: flex; font-size: 20px; align-items: center; justify-content: center;">
+		<div style="display: flex; font-size: 20px; align-items: center; justify-content: center; margin-bottom: 20px;">
 			<div style="display: flex; align-items: center; justify-content: center; width: 100%;">
 				<a href="/historical-lows" style="text-decoration: none; color: var(--colorEnlace);">@Herramientas.Idiomas.CogerCadena(idioma, "LastLows", "Index")</a>
 
@@ -555,11 +519,10 @@ else
 		</div>
 
 		<div style="display: flex; flex-direction: column; gap: 25px; margin-bottom: 25px;">
-			<Virtualize Context="juego" Items="juegosMinimosMostrar" ItemSize="107">
-				<ItemContent>
-					<ResultadoJuego idioma="@idioma" juego="@juego" usuario="@usuario" usuarioJuegosSteam="@usuarioJuegosSteam" tipo="ResultadoJuego.Tipo.Portada" />
-				</ItemContent>
-			</Virtualize>
+			@foreach (var juego in juegosMinimosMostrar)
+			{
+				<ResultadoJuego idioma="@idioma" juego="@juego" usuario="@usuario" usuarioJuegosSteam="@usuarioJuegosSteam" tipo="ResultadoJuego.Tipo.Portada" />
+			}
 		</div>
 
 		<div style="margin-bottom: 20px; margin-left: auto; margin-right: auto; width: 400px;">
@@ -720,8 +683,6 @@ else
 
 	private List<string> usuarioJuegosSteam = new List<string>();
 
-	private List<BaseDatos.Recompensas.RecompensaJuego> recompensas = new List<BaseDatos.Recompensas.RecompensaJuego>();
-
 	protected override void OnInitialized()
 	{
 		if (usuario != null)
@@ -827,23 +788,6 @@ else
 								noticiasMostrar.Add(noticia);
 							}
 						}
-					}
-				}
-			}
-
-			#endregion
-
-			#region Recompensas
-
-			if (usuario == null)
-			{
-				recompensas = BaseDatos.Recompensas.Juegos.Todo();
-
-				if (recompensas != null)
-				{
-					if (recompensas.Count > 0)
-					{
-						recompensas = recompensas.OrderByDescending(x => x.Coins).ToList();
 					}
 				}
 			}
