--- a/pepeizqs deals web/Pages/Contact.cshtml
+++ b/pepeizqs deals web/Pages/Contact.cshtml
@@ -6,20 +6,20 @@
 	Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
-<div style="font-size: 23px; text-align: left; margin-bottom: 30px;">
+<div style="font-size: 22px; text-align: left; margin-bottom: 30px;">
 	@Herramientas.Idiomas.CogerCadena(Model.idioma, "Contact.Title")
 </div>
 
-<div class="alert alert-danger alert-dismissible" style="display: flex; align-items: center;" role="alert">
-	<div style="width: 6%; text-align: center;">
-		<i class="fa-solid fa-circle-exclamation" style="font-size: 30px;"></i>
+<div style="display: flex; align-items: center; background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 20px; gap: 20px;">
+	<div>
+		<i class="fa-solid fa-circle-info" style="font-size: 25px;"></i>
 	</div>
-	<div style="width: 94%;">
+	<div>
 		@Herramientas.Idiomas.CogerCadena(Model.idioma, "Contact.String1")
 	</div>	
 </div>
 
-<div class="perfil" style="margin-top: 30px; margin-bottom: 40px;">
+<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 20px; margin-top: 30px; margin-bottom: 40px;">
 	@Herramientas.Idiomas.CogerCadena(Model.idioma, "Contact.String2")
 	admin@pepeizqdeals.com
 </div>
