--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -167,16 +167,17 @@
         </nav>
     </header>
 
-    @{
+    @if (Context.Request.Path.ToString().Contains("/admin") == false)
+    {
         BaseDatos.Avisos.Aviso aviso = BaseDatos.Avisos.Buscar.Ejecutar(idioma);
 
-        @if (aviso != null)
+        if (aviso != null)
         {
             if (string.IsNullOrEmpty(aviso.Mensaje.Trim()) == false)
             {
                 <div style="padding: 20px; background-color: var(--fondoMinimo); font-size: 17px;">
-                    <div class="cuerpo-ancho" style="display: flex; align-items: center; flex-direction: initial; gap: 20px;">
-                        <label>@aviso.Fecha.Day.ToString()/@aviso.Fecha.Month.ToString()</label>
+                    <div class="cuerpo-ancho" style="display: flex; align-items: center; flex-direction: initial; gap: 30px;">
+                        <label style="font-size: 14px;">@Herramientas.Calculadora.DiferenciaTiempo(aviso.Fecha, idioma)</label>
 
                         @{
                             bool hayEnlace = false;
@@ -223,8 +224,19 @@
                         &copy; @DateTime.Now.Year.ToString() • <a href="https://pepeizqapps.com/" style="text-decoration: none;" target="_blank">pepeizq's apps</a> • <a href="https://pepeizqdeals.com/" style="text-decoration: none;" target="_blank">pepeizq's deals</a>
                     </div>
                     
-                    <div style="font-size: 16px; margin-top: 30px;">
-                        <a href="@codigoFuente" target="_blank" style="text-decoration: none;"><i class="fa-brands fa-github" style="font-size: 20px; margin-right: 10px;"></i>@Herramientas.Idiomas.CogerCadena(idioma, "SourceCode", "Footer")</a> • <a href="/api" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Api", "Footer")</a> • <a href="/contact" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Contact", "Footer")</a> • <a href="@visitas" style="text-decoration: none;" target="_blank">@Herramientas.Idiomas.CogerCadena(idioma, "Visits", "Footer")</a> • <a href="/privacy" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Privacy", "Footer")</a>
+                    <div style="font-size: 16px; margin-top: 30px; display: flex; align-items: start;">
+                        <div style="display: flex; flex-direction: column; gap: 5px; width: 100%;">
+                            <a href="@codigoFuente" target="_blank" style="text-decoration: none;"><i class="fa-brands fa-github" style="font-size: 20px; margin-right: 10px;"></i>@Herramientas.Idiomas.CogerCadena(idioma, "SourceCode", "Footer")</a>
+                            <a href="/contact" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Contact", "Footer")</a>
+                            <a href="/privacy" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Privacy", "Footer")</a>
+                            <a href="@visitas" style="text-decoration: none;" target="_blank">@Herramientas.Idiomas.CogerCadena(idioma, "Visits", "Footer")</a>
+                        </div>
+
+                        <div style="display: flex; flex-direction: column; gap: 5px; width: 100%;">
+                            <a href="/rewards" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Rewards", "Footer")</a>
+                            <a href="/last-added" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "LastAdded", "Footer")</a>
+                            <a href="/api" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Api", "Footer")</a>
+                        </div>
                     </div>
                 </div>
 
@@ -274,15 +286,15 @@
     </script> *@
 
 
-    <script src="_framework/blazor.server.js"></script>
-  @*   <script>
+    <script src="_framework/blazor.server.js" autostart="false"></script>
+    <script>
         async function boot() {
             await Blazor.start()
 
             if (document.location.href != "https://pepeizqdeals.com/admin") {
-                // while (Blazor.defaultReconnectionHandler === undefined) {
-                //     await delay(100)
-                // }
+                while (Blazor.defaultReconnectionHandler === undefined) {
+                    await delay(100)
+                }
                 Blazor.defaultReconnectionHandler._reconnectCallback = function (d) {
                     document.location.reload()
                 }
@@ -290,7 +302,7 @@
         }
 
         boot()
-    </script> *@
+    </script>
 
     <script>
         function hoverTooltip(e, id) {
