--- a/pepeizqs deals web/Pages/historical-lows.cshtml
+++ b/pepeizqs deals web/Pages/historical-lows.cshtml
@@ -1,13 +1,30 @@
 ﻿@page
+
+@using Microsoft.AspNetCore.Identity
+@using pepeizqs_deals_web.Areas.Identity.Data
+
 @model pepeizqs_deals_web.Pages.HistoricalLowModel
+
+@inject SignInManager<Usuario> SignInManager
+@inject UserManager<Usuario> UserManager
 
 @{
 	#nullable disable
 
 	ViewData["Title"] = Herramientas.Idiomas.CogerCadena(Model.idioma, "Title", "HistoricalLows");
 	Layout = "/Pages/Shared/_Layout.cshtml";
-}
 
-@(await Html.RenderComponentAsync<Componentes.Secciones.Minimos>(RenderMode.Server, new { 
-	idioma = Model.idioma
-}))
+	bool usuarioLogeado = SignInManager.IsSignedIn(User);
+	Usuario usuario = new Usuario();
+
+	if (usuarioLogeado == true)
+	{
+		usuario = await UserManager.GetUserAsync(User);
+	}
+
+	@(await Html.RenderComponentAsync<Componentes.Secciones.Minimos>(RenderMode.Server, new
+	{
+		idioma = Model.idioma,
+		usuario = usuario
+	}))
+}
